codex-rs/tui/src/terminal_browser/snapshots/codex_tui__terminal_browser__tests__terminal_browser_human_control_overlay_snapshot.snap
---
source: tui/src/terminal_browser/tests.rs
expression: "buffer_text(&buffer, area)"
---
┌ Terminal browser - user controlled ──────────────────────┐
│ running Example                                          │
│ https://example.com                                      │
│User                                                      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ Ctrl+] return control to Codex                           │
└──────────────────────────────────────────────────────────┘
