codex-rs/tui/src/terminal_browser/snapshots/codex_tui__terminal_browser__tests__terminal_browser_overlay_snapshot.snap
---
source: tui/src/terminal_browser/tests.rs
expression: "buffer_text(&buffer, area)"
---
┌ Terminal browser - agent controlled ─────────────────────┐
│ running Example                                          │
│ https://example.com                                      │
│Code                                                      │
│x UI                                                      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ Esc hide   /browser close stop browser                   │
└──────────────────────────────────────────────────────────┘
