codex-rs/tui/src/terminal_browser/snapshots/codex_tui__terminal_browser__tests__terminal_browser_profile_forget_approval_snapshot.snap
---
source: tui/src/terminal_browser/tests.rs
expression: "buffer_text(&buffer, area)"
---

  Approve browser profile change?
  The model wants to permanently delete browser profile `work`

› 1. Permanently delete profile  This cannot be undone
  2. Cancel                      Do not change browser
                                 profiles




  Press enter to confirm or esc to go back
