codex-rs/tui/src/terminal_browser/snapshots/codex_tui__terminal_browser__tests__terminal_browser_unavailable_panel_wraps_reason_snapshot.snap
---
source: tui/src/terminal_browser/tests.rs
expression: "buffer_text(&buffer, area)"
---
 unavailable Carbonyl
 about:blank
Browser unavailable: Carbonyl was not found on
PATH; install it or set CODEX_CARBONYL_BINARY





 Esc hide   /browser control take control
